--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -18,3 +18,5 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 # Use dedicated thread for display updates
 CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
+
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
